# primenumbersolver

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  OpenMP_Parallelization_Plan.md  README.md  build.sh  conanfile.txt  prime_number_software_plan.md  test_implementation.sh
.github/: copilot-instructions.md
.github/workflows/: pr-checks.yml
include/: BasicSieve.hpp  BasicSieve_debug.hpp  BitSieve.hpp  ParallelBasicSieve.hpp  ParallelBitSieve.hpp  ParallelSieveBase.hpp  ParallelWheelSieve.hpp  WheelSieve.hpp
src/: BasicSieve.cpp  BitSieve.cpp  ParallelBasicSieve.cpp  ParallelBasicSieve_debug.cpp  ParallelBitSieve.cpp  ParallelWheelSieve.cpp  WheelSieve.cpp  benchmark_parallel.cpp  main.cpp
tests/: test_BasicSieve.cpp  test_BitSieve.cpp  test_WheelSieve.cpp
